--- a/form/src/App.css
+++ b/form/src/App.css
@@ -178,3 +178,10 @@ input:hover{
         height: 50px;
     }
 }
+
+
+@media only screen and (max-width:725px){
+    form{
+        width: 100%;
+    }
+}
