--- a/form/src/App.css
+++ b/form/src/App.css
@@ -1,7 +1,7 @@
 form{
     width: 40%;
     /* width: 600px; */
-    /* height: 98%; */
+    height: 100%;
     background-color: white;
     border-radius: 10px;
     display: flex;
