--- a/form/src/index.css
+++ b/form/src/index.css
@@ -12,7 +12,7 @@
 
 html{
     width: 100%;
-    height:fit-content;
+    height:100%;
     background-color:  hsl(148, 38%, 91%);
 
 }
@@ -30,4 +30,10 @@ body{
     align-items: center;
     justify-content: center;
     padding: 10px;
+}
+
+@media only screen and (max-width:768px){
+    #root{
+        padding: 0;
+    }
 }
